--- a/chat.html
+++ b/chat.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      var socket = io(imed-athulr.c9users.io:3000);
+      var socket = io('imed-athulr.c9users.io:3000');
       $('form').submit(function(){
         socket.emit('chat message', $('#m').val());
         $('#m').val('');
